--- a/Notebooks/session 2.ipynb
+++ b/Notebooks/session 2.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### TA: Zahra Sattari"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1) Variables and types"
    ]
   },
